# logscope-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.1.md  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml
docs/: architecture-review.md
logscope/: __init__.py  cli.py  parser.py  themes.py  viewer.py
tests/: test_filters.py  test_highlight.py  test_parser.py  test_time.py
