[tool.poetry]
name = "logscope"
version = "0.1.0"
description = "LogScope — Beautiful log viewer for the terminal"
authors = ["vinnytherobot"]
readme = "README.md"
packages = [{include = "logscope"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.0.0"
typer = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
logscope = "logscope.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
