[tool.poetry]
name = "logscope-cli"
version = "0.4.3"
description = "LogScope — Beautiful log viewer for the terminal"
authors = ["vinnytherobot"]
readme = "README.md"
packages = [{include = "logscope"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.0.0"
typer = "^0.15.1"
typing-extensions = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.15.0"

[tool.poetry.scripts]
logscope = "logscope.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["logscope"]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py39"
